   modify code generated by ibator.  In most cases, you should be able
   to write plugins to replace any custom classes that subclass one of
   ibator's built-in generators.  Plugins are now the preferred method for
   extending ibator and we recommend that you do not extend ibator's
   built in generators unless absolutely necessary.
   
   
Changes:
1. JSE 5.0 or greater is required
2. Changed and centralized classloading - moved the <classPathEntry> from
   the <jdbcConnection> element to <ibatorConfiguration>, removed the
   rootClasspath property from <javaModelGenerator>
3. Changed API on the JavaTypeResolver interface
4. Changed API on the SqlMapGenerator interface.  If you have previously extended
   one of ibator's implementations, we suggest you switch to an ibator plugin.
5. Changed API on the DAOGenerator interface.  If you have previously extended
   one of ibator's implementations, we suggest you switch to an ibator plugin.
6. Removed Legacy generator set
7. Removed after generation hook methods in favor of the new ibator
   plugin mechanism.
8. <ibatorContext> elements now require an id

-------------------------------------------------------------------------------
Version 1.1.0:
Bugs - 
1. corner case where the new "by example" methods fail if a criteria
   class has been added to the list, but there are no criteria set
2. trimStrings on JavaModelGenerator not working
3. Fix the XML file merger so that entities are preserved
4. Fixed the configuration parser so that it correctly deals with
   external entities
5. IBATIS-434 - Incorrect default mapping for BIT datatype
6. Fixed bug where Abator generated incorrect properties for certain
   database columns (for example, if the column name is I_NAME)

Enhancements - 
1. IBATIS-348 - escape column names with $ or #, and ignore special characters
   for generated Java properties by default
2. Add "clear" method to generated example classes in the Java2/Java5
   generator sets