@@ -1,4 +1,4 @@
 #ibator build version info
-#Wed Apr 30 11:34:49 CDT 2008
+#Sat May 03 11:54:30 CDT 2008
 version=1.2.0
-buildNum=537
+buildNum=538
