@@ -37,6 +37,10 @@
       strongly suggest that you move to a plugin.  See the
       <a href="configreference/ibatorPlugin.html">&lt;ibatorPlugin&gt;</a> page
       for detailed information.</li>
+  <li>Added support for "runtimeCatalog" and "runtimeSchema" properties to the
+      <a href="configreference/table.html">&lt;table&gt;</a>
+      configuration element.  Thanks to Dan Turkenkopf for the idea and the
+      patch!</li>
 </ul>
 
 <h3>Changes from Abator</h3>
