@@ -12,6 +12,9 @@ Enhancements:
    ibator's built-in generators.  Plugins are now the preferred method for
    extending ibator and we recommend that you do not extend ibator's
    built in generators unless absolutely necessary.
+2. Added support for runtimeCatalog and runtimeSchema properties to the
+   table configuration.  Thanks to Dan Turkenkopf for the idea and the
+   patch!
    
    
 Changes:
